# D-NES

./: .gitignore  .gitmodules  CMakeLists.txt  D-NES.sln  LICENSE  Makefile  README.md  SConstruct
D-NES/src/: main.cc  ram.cc
D-NES/src/log/: logger.h
Debug/: makefile  objects.mk  sources.mk
Debug/src/: cart_factory.d  cpu.d  main.d  nes.d  subdir.mk
Debug/src/Emulator/: subdir.mk
Debug/src/FrontEnd/: subdir.mk
Debug/src/log/: subdir.mk
Debug/src/mappers/: cart.d  nrom.d  subdir.mk
Debug/src/resources/: subdir.mk
Release/: makefile  sources.mk
Release/src/: cart_factory.d  cpu.d  main.d  subdir.mk
Release/src/Emulator/: subdir.mk
ext/: Makefile.vc  _externals.vcxproj
site_scons/: site_init.py
site_scons/site_tools/: compilation_db.py
source/: CMakeLists.txt
source/app/: CMakeLists.txt  SConscript  app.cc  audio_settings_window.cc  audio_settings_window.h  game_list.cc  main_window.cc  main_window.h  path_settings_window.cc  path_settings_window.h  ppu_viewer_window.cc  ppu_viewer_window.h  settings_window_base.cc  settings_window_base.h  video_settings_window.cc  video_settings_window.h
source/core/: CMakeLists.txt  SConscript  apu.cc  apu.h  cart.cc  cart.h  cpu.cc  cpu.h  dnes.cc  error.h  ines_file.cc  nes.cc  nes.h  nes_impl.cc  nes_impl.h  ppu.cc  ppu.h  state_save.h
source/core/audio/: alsa_backend.cc  alsa_backend.h  alsa_platform.cc  audio_backend.cc  audio_backend_base.h  iaudio_platform.cc  iaudio_platform.h  null_audio_backend.h  xaudio2_platform.h
source/core/common/: error_handling.h  file.cc  file.h  ines.cc  ines.h  nes_exception.cc  nes_exception.h  state_save.h
source/core/include/dnes/: dnes.h
source/core/mappers/: cnrom.cc  cnrom.h  mapper_base.cc  mapper_base.h  mmc1.cc  mmc1.h  mmc3.cc  mmc3.h  nrom.cc  nrom.h  uxrom.cc  uxrom.h
source/core/video/: gl_util.h  glx_platform.cc  glx_platform.h  igl_platform.cc  igl_platform.h  null_video_backend.h  opengl_backend.cc  opengl_backend.h  osd_font.h  video_backend.cc  video_backend_base.h  video_manager.cc  video_manager.h
src/: cart.cc  cart.h  cart_factory.cc  cart_factory.h  cpu.cc  cpu.h  main.cc  nes.h  ppu.cc  ppu.h  ram.cc  ram.h  vram.cc  vram.h
src/Emulator/: CMakeLists.txt  Emulator.vcxproj  Emulator.vcxproj.filters  SConscript  apu.cc  apu.h  cart.cc  cart.h  clock.cc  clock.h  cpu.cc  cpu.h  nes.cc  nes.h  nes_callback.h  ppu.cc  ppu.h  subdir.mk
src/Emulator/Interfaces/: display.h  idisplay.h
src/Emulator/audio/: alsa_platform.cc  alsa_platform.h  audio_backend.cc  audio_backend.h  audio_stream.cc  audio_stream.h  iaudio_backend.h  iaudio_platform.cc  iaudio_platform.h  xaudio2_backend.cc  xaudio2_backend.h  xaudio2_platform.cc  xaudio2_platform.h
src/Emulator/backends/: audio_backend.cc  audio_backend.h  font_small.h  video_backend.cc  video_backend.h
src/Emulator/backends/utils/: font.h
src/Emulator/common/: file.cc  ines.cc  ines.h  nes_exception.cc  sha1.cc  sha1.h  state.h
src/Emulator/log/: logger.cc  logger.h  subdir.mk
src/Emulator/mappers/: cart.cc  cart.h  cnrom.cc  cnrom.h  mapper_base.cc  mapper_base.h  mmc1.cc  mmc1.h  mmc3.cc  mmc3.h  nrom.cc  nrom.h  subdir.mk  sxrom.cc  sxrom.h  uxrom.cc  uxrom.h
src/Emulator/video/: gl_util.cc  gl_util.h  glx_platform.cc  glx_platform.h  igl_platform.cc  igl_platform.h  video_backend.cc  video_backend.h  wgl_platform.cc  wgl_platform.h
src/FrontEnd/: CMakeLists.txt  FrontEnd.vcxproj  FrontEnd.vcxproj.filters  SConscript  app.cc  app.h  app_settings.cc  app_settings.h  audio_settings_window.cc  audio_settings_window.h  config.xml  game_list.cc  game_list.h  game_view.h  game_window.cc  game_window.h  log_window.cc  log_window.h  main.cc  main_window.cc  main_window.h  name_table_viewer.cc  name_table_viewer.h  nes_thread.cc  nes_thread.h  path_settings_window.cc  path_settings_window.h  pattern_table_display.cc  pattern_table_display.h  ppu_debug_window.cc  ppu_debug_window.h  ppu_viewer_window.cc  ppu_viewer_window.h  settings_window.cc  settings_window.h  settings_window_base.cc  settings_window_base.h  subdir.mk  video_settings_window.cc  video_settings_window.h
src/FrontEnd/config/: config.xml
src/FrontEnd/glade/: LogWindow.glade  MainWindow.glade  NameTableViewer.glade  SettingsWindow.glade
src/FrontEnd/utilities/: app_settings.cc  app_settings.h  emulator_worker.cc  emulator_worker.h  gtk_display.cc  gtk_display.h  log_buffer.cc  log_buffer.h  subdir.mk
src/config/: config.ini
src/log/: logger.cc  logger.h
src/mappers/: mapper.cc  mapper.h  nrom.cc  nrom.h
src/resources/: d-nes.gresource.xml
(+12 files in other folders)
